[package]
name = "dist_keygen_with_ecdsa_and_libp2p"
version = "0.1.0"
edition = "2018"

[dependencies]

async-trait = "0.1.50"

criterion = "0.3"
rust-crypto = "0.2.36"
hex = "0.4"
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.7"
async-std = { version = "1.6.2", features = ["attributes"] }

libp2p = { version = "0.39.1", features = ["tcp-tokio", "mdns"] }
futures = "0.3.15"
tokio = { version = "1.8.2", features = ["full"] }
env_logger = "0.9.0"

subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
libsecp256k1 = "0.3.2"
curv = { package = "curv-kzen", version = "0.7", default-features = false, features = ["num-bigint"] }

[dependencies.centipede]
git = "https://github.com/KZen-networks/centipede"
tag = "v0.2.12"
default-features = false

[dependencies.paillier]
git = "https://github.com/KZen-networks/rust-paillier"
tag = "v0.3.10"
default-features = false

[dependencies.zk-paillier]
git = "https://github.com/KZen-networks/zk-paillier"
tag = "v0.3.12"
default-features = false

[dependencies.class_group]
git = "https://github.com/KZen-networks/class"
tag = "v0.5.2"
optional = true

[dev-dependencies]
